<resources>
    <string name="app_name">MyList</string>
    <string name="tarefas_de_hoje">Tarefas de hoje...</string>
    <string name="bot_o_adicionar_de_tarefa">botão adicionar de tarefa</string>
    <string name="criar_tarefa">Criar tarefa</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição(Opcional)</string>
    <string name="voltar">voltar</string>
    <string name="data">Data</string>
    <string name="horario">Horário</string>
    <string name="cancelar">Cancelar</string>
    <string name="mais_op_es">Mais opções</string>
    <string name="editar">Editar tarefa</string>
    <string name="deletar_tarefa">Deletar tarefa</string>
    <string name="ops_voc_n_o_possui_nehuma_tarefa_para_hoje">Ops! Você não possui nehuma tarefa hoje.</string>
</resources>