<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wallpaper_app_todolist"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/arrow_back"
        android:background="@drawable/shape_texts"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/voltar" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/shape_texts"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/criar_tarefa"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewBack"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text"
        android:hint="@string/titulo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"/>


    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/shape_edit_text"
        android:gravity="top|start"
        android:hint="@string/descricao"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"

        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/editTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_edit_text"
        android:drawableStart="@drawable/ic_dit_calendar"
        android:drawablePadding="5dp"
        android:drawableTint="@color/black"
        android:editable="false"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="none"
        android:maxLines="1"
        android:padding="10dp"
        android:paddingEnd="15dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        tools:targetApi="m" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text"
        android:drawableStart="@drawable/ic_ccess_time"
        android:drawablePadding="5dp"
        android:drawableTint="@color/black"
        android:editable="false"
        android:hint="@string/horario"
        android:importantForAutofill="no"
        android:inputType="none"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingEnd="15dp"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData"
        tools:targetApi="m" />


    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shape_button"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/cancelar"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:icon="@drawable/ic_cancel"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/criar_tarefa"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="10dp"
        app:icon="@drawable/ic_note_add"
        app:iconPadding="10dp"
        app:iconGravity="textEnd"
        android:background="@drawable/shape_button"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>